cambio de imagen
se cambian las imagenes del testimonio de usuarios

--- a/index.html
+++ b/index.html
@@ -139,22 +139,22 @@
           <div class="col-lg-4">
             <div class="testimonial-item mx-auto mb-5 mb-lg-0">
               <img class="img-fluid rounded-circle mb-3" src="img/testimonials-1.jpg" alt="">
-              <h5>Margaret E.</h5>
-              <p class="font-weight-light mb-0">"This is fantastic! Thanks so much guys!"</p>
+              <h5>Edison Cordero.</h5>
+              <p class="font-weight-light mb-0">"Es una herramienta muy fácil de usar, super amigable con el usuario"</p>
             </div>
           </div>
           <div class="col-lg-4">
             <div class="testimonial-item mx-auto mb-5 mb-lg-0">
               <img class="img-fluid rounded-circle mb-3" src="img/testimonials-2.jpg" alt="">
-              <h5>Fred S.</h5>
-              <p class="font-weight-light mb-0">"Bootstrap is amazing. I've been using it to create lots of super nice landing pages."</p>
+              <h5>Anibal Arevalo.</h5>
+              <p class="font-weight-light mb-0">"Como programador recomiendo Boostrap 4 para el diseño de la interfaz de usuario, es muy facil de usar y da acabados muy profesionales."</p>
             </div>
           </div>
           <div class="col-lg-4">
             <div class="testimonial-item mx-auto mb-5 mb-lg-0">
               <img class="img-fluid rounded-circle mb-3" src="img/testimonials-3.jpg" alt="">
-              <h5>Sarah	W.</h5>
-              <p class="font-weight-light mb-0">"Thanks so much for making these free resources available to us!"</p>
+              <h5>Gustavo Decker.</h5>
+              <p class="font-weight-light mb-0">"¡Muchas gracias por hacer que estos recursos gratuitos estén disponibles para nosotros!"</p>
             </div>
           </div>
         </div>
@@ -207,7 +207,7 @@
                 <a href="#">Privacy Policy</a>
               </li>
             </ul>
-            <p class="text-muted small mb-4 mb-lg-0">&copy; Your Website 2018. All Rights Reserved.</p>
+            <p class="text-muted small mb-4 mb-lg-0">&copy; Xavier Ramirez 2018. All Rights Reserved.</p>
           </div>
           <div class="col-lg-6 h-100 text-center text-lg-right my-auto">
             <ul class="list-inline mb-0">
