--- a/index.html
+++ b/index.html
@@ -803,7 +803,7 @@
                             </div>
                             <div class="form-group row">
                                 <div class="col-sm-10">
-                                    <button class="btn btn-primary" type="submit">
+                                    <button class="btn btn-primary" id="boton1" type="button">
                                         Enviar
                                     </button>
                                 </div>
@@ -993,19 +993,19 @@
                     <div class="col-lg-6 h-100 text-center text-lg-right my-auto">
                         <ul class="list-inline mb-0">
                             <li class="list-inline-item mr-3">
-                                <a href="#">
+                                <a href="https://www.facebook.com">
                                     <i class="fab fa-facebook fa-2x fa-fw">
                                     </i>
                                 </a>
                             </li>
                             <li class="list-inline-item mr-3">
-                                <a href="#">
+                                <a href="https://twitter.com/?lang=es">
                                     <i class="fab fa-twitter-square fa-2x fa-fw">
                                     </i>
                                 </a>
                             </li>
                             <li class="list-inline-item">
-                                <a href="#">
+                                <a href="https://www.instagram.com/?hl=es-la">
                                     <i class="fab fa-instagram fa-2x fa-fw">
                                     </i>
                                 </a>
@@ -1019,6 +1019,8 @@
         <script src="vendor/jquery/jquery.min.js">
         </script>
         <script src="vendor/bootstrap/js/bootstrap.bundle.min.js">
+        </script>
+        <script src="vendor/bootstrap/js/funciones.js">
         </script>
     </body>
 </html>
